--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Site do Coletivo Literário Kalúnia"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
