--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8118SF6B32"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <meta name="description" content="Seu site de escritores e escritoras de Atibaia e região. Literatura, cultura e eventos." />
+    <meta name="keywords" content="literatura, escritores, Atibaia, coletivo, textos, eventos" />
+    <meta name="author" content="Coletivo Kalúnia" />
 
-  gtag('config', 'G-8118SF6B32');
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8118SF6B32"></script>
+    <script>
+       window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+
+       gtag('config', 'G-8118SF6B32');
 </script>
     
     <meta
